--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Hello World</h1>
     <h1>Second Commit</h1>
     <h1>Conflict here</h1>
-    <h1>remote repo</h1>
+    <h1>Remote Repo</h1>
+    <h1>Remote Clone</h1>
 </body>
 </html>
