--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <h1>Remote Clone</h1>
     <h1>Staging Branch</h1>
     <h1>Change something</h1>
+    <h1>use GITHUB UI</h1>
 </body>
 </html>
